# atodium_optics

./: Cargo.toml  LICENSE
atodium_optics_test/: Cargo.toml
atodium_optics_test/src/: main.rs
glsl/: bindless.glsl
glsl/test/: rt.rchit.glsl  rt.rmiss.glsl
shaders/: Cargo.toml  render.comp.glsl
shaders/glsl/test/: hello_world.comp.glsl  rt.rgen.glsl
shaders/spectrum_table/: Cargo.toml
shaders/spectrum_table/code/: Cargo.toml
shaders/spectrum_table/code/src/: main.rs
shaders/spectrum_table/macro/: Cargo.toml
shaders/spectrum_table/macro/src/: lib.rs
shaders/spectrum_table/serialized/: Cargo.toml
shaders/spectrum_table/serialized/src/: main.rs
shaders/spectrum_table/src/: lib.rs
shaders/src/: bindless.rs  lib.rs
shaders/src/bsdf/: diffuse.rs  fresnel.rs  mod.rs
shaders/src/camera/: film.rs  filter.rs  medium.rs  mod.rs  ray.rs  transform.rs
shaders/src/light/: interaction.rs  medium.rs  mod.rs  ray.rs
shaders/src/spectrum/: color.rs  color_space.rs  mod.rs
shaders/src/test/: cornell.rs  hello_world.rs  mod.rs  rt_pipeline.rs
shaders/src/util/: frame.rs  math.rs  mod.rs  sampling.rs  vector.rs
shaders/test/: hello_world.comp.glsl  render.comp.glsl  rt.h.glsl  rt.rchit.glsl  rt.rgen.glsl  rt.rmiss.glsl
src/: lib.rs  util.rs
src/memory/: mod.rs  render_buffer.rs  render_image.rs  texture.rs
src/model/: mesh.rs  mod.rs  vertex.rs
src/render/: bindless_descriptor.rs  descriptor_set.rs  device.rs  glsl_shader_compiler.rs  mod.rs  pipeline.rs  shader_builder.rs
src/render_resource/: render_buffer.rs  render_image.rs  texture.rs
src/rt/: blas.rs  mod.rs  tlas.rs
src/vk_context/: bindless_descriptor.rs  descriptor_set.rs  device.rs  glsl_shader_compiler.rs  mod.rs  pipeline.rs  shader_compiler.rs  shader_reflection.rs
src/vulkan_context/: descriptor_set.rs  device.rs  mod.rs  pipeline.rs  shader_compiler.rs
