[package]
name = "atodium_optics"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "atodium_optics_test",
    "shaders"
]

[dependencies]
ash = { version = "0.38.0", features = ["linked", "debug"] }
anyhow = "1.0.89"
gpu-allocator = "0.27.0"
shaderc = "0.9.1"
rspirv-reflect = "0.9.0"
lazy_static = "1.5.0"
log = "0.4.27"
walkdir = "2.5.0"
glam = "0.30.2"
gltf = "1.4.1"
bytemuck = "1.23.0"
image = "0.23.14"
spirv-builder = "0.9.0"

[profile.release.build-override]
opt-level = 3
codegen-units = 16

[profile.dev.build-override]
opt-level = 3
