[package]
name = "shaders"
version = "0.1.0"
edition = "2021"

[package.metadata.rust-gpu.install]
auto-install-rust-toolchain = true

[package.metadata.rust-gpu.build]
output-dir = "output"
multimodule = true

[lib]
crate-type = ["dylib"]

[dependencies]
spirv-std = "0.9.0"
bytemuck = "1.23.0"
num-traits = { version = "0.2.15", default-features = false }
libm = { version = ">=0.2.5, <=0.2.11", default-features = false }
glam = { version = ">=0.22, <=0.30", default-features = false, features = ["libm"] }
