[package]
name = "shaders"
version = "0.1.0"
edition = "2021"

[package.metadata.rust-gpu.install]
auto-install-rust-toolchain = true

[package.metadata.rust-gpu.build]
output-dir = "output"
multimodule = true

[lib]
crate-type = ["dylib"]

[dependencies]
spirv-std = "0.9.0"
num-traits = { version = "0.2.15", default-features = false }
glam = { version = "0.30.4", default-features = false, features = ["libm"] }
num-complex = { version = "0.4.6", default-features = false, features = ["libm"] }
bitflags = "2.9.1"
